fix scrollbar cuando no se necesita

--- a/wp-content/themes/otto/sass/styles.scss
+++ b/wp-content/themes/otto/sass/styles.scss
@@ -164,8 +164,8 @@ h6 { font-size: $size-seis;}
 }
 
 .wrap {
-  margin-bottom: $contact-height;
-  margin-top: $bar-height;
+  padding-bottom: $contact-height;
+  padding-top: $bar-height;
 }
 /* ==========================================================================
    Content
